--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.9",
     "mongoose": "^8.12.2",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
